Arregle pequeño bug

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="panel-heading">Educación</div>
         <div class="panel-body">
             <div>Tecnológico de Monterrey, Monterrey, México — Computer Science and Technology Engineering, December 2021</div>
-            <div>GPA - 90 out of a 0 - 100 scale</div>
+            <div>GPA - <span class="badge">90</span> out of a <span class="badge">0</span> - <span class="badge">100</span>scale</div>
         </div>
     </div>
     <div class="panel panel-default">
